--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mantine/hooks": "^7.6.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
-    "firebase": "^10.8.1",
+    "@supabase/supabase-js": "^2.39.7",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +23,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.4",
     "swr": "^2.2.5",
     "zod": "^3.22.4"
   },
@@ -41,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.35",
+    "supabase": "^1.148.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
