--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "swr": "^2.2.5",
+    "tailwind-scrollbar": "^3.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
